Added batch job execution tracking API and job monitoring support.
- Introduced `BatchJobExecutionTracking` entity for tracking job execution data.
- Implemented REST API endpoints in `BatchJobTrackingResource` for listing, retrieving, and summarizing job executions.
- Added `BatchJobTrackingService` with job lifecycle hooks for tracking progress, failures, and logs.
- Enhanced job monitoring with `JobMonitoringListener` for capturing execution details and failures.
- Launched `contract-consultant-forward-recalc` job with partitioned progress tracking and monitoring support.